# AroundTheCloudIn80Days

./: .gitattributes  README.md  Untitled.ipynb  main.py  pyproject.toml  requirements.txt  static.py  updater.py
data/: AT.csv  BE.csv  CH-2021-11-20.csv  CH.csv  DE-2021-11-20.csv  DE.csv  DK-2021-11-20.csv  DK.csv  ES-2021-11-20.csv  ES.csv  FI.csv  FR-2021-11-20.csv  FR.csv  GR-2021-11-20.csv  IE.csv  IT.csv  NL-2021-11-20.csv  NL.csv  NO-2021-11-20.csv  NO.csv  PL-2021-11-20.csv  PL.csv  SE-2021-11-20.csv  SE.csv  UK.csv
data/full/: AT.csv  DK.csv  IT.csv  NO.csv  SE.csv
energy_calculator/: __init__.py
frontend/: _redirects  index.html
frontend/css/: custom.css  table.css
frontend/js/: main.js
src/: main.py  static.py
